fix: character in index.html

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                             PPL-ProtGPT2, Novelty and Diversity. For structure-based metrics, the optimal pLDDT score
                             drops from 75.25 to 66.20, while the optimal PAE increases from 0.96 to 14.53. In terms of
                             language alignment, the ProTrek Score declines from 17.50 to 14.14, and the optimal Keyword
-                            Recovery score decreases from 42.65\% to 28.74\%. Most sequence-based metrics also show a
+                            Recovery score decreases from 42.65% to 28.74%. Most sequence-based metrics also show a
                             similar downward trend.</li>
                         <li><strong>Fine-tuning provides limited benefit.</strong> Unlike in the description-guided
                             task, fine-tuning led to only modest gains in the keyword-guided task, likely due to its
@@ -171,7 +171,7 @@
                         <li><strong>No model demonstrates satisfactory Foldability.</strong> For the four foldability
                             metrics, a pLDDT score greater than 70 and a PAE less than 10 are generally required to
                             indicate that the designed protein has good foldability. However, the highest pLDDT score,
-                            66.20, is achieved by Pinal, with only 45.97\% of sequences exceeding this threshold, while
+                            66.20, is achieved by Pinal, with only 45.97% of sequences exceeding this threshold, while
                             the lowest PAE, 12.55, is achieved by Chroma, with just 40% of sequences meeting the PAE <
                                 10 criterion. These results indicate that none of the models exhibit satisfactory
                                 foldability in the keyword-guided task.</li>
